[tool.poetry]
name = "map-corruption"
version = "0.1.0"
description = ""
authors = ["staticf0x <staticf0x@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
notebook = "^7.1.2"
ipykernel = "^6.29.4"
seaborn = "^0.13.2"
pandas = "^2.2.2"
rich = "^13.7.1"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
